--- a/style.css
+++ b/style.css
@@ -1,18 +1,20 @@
 :root {
   --bg-dark: hsl(293 100% 3%);
---bg: hsl(297 100% 5%);
---bg-light: hsl(298 100% 8%);
---text: hsl(301 100% 98%);
---text-muted: hsl(301 39% 72%);
---highlight: hsl(299 61% 38%);
---border: hsl(298 100% 21%);
---border-muted: hsl(298 100% 12%);
---primary: hsl(299 82% 72%);
---secondary: hsl(133 62% 53%);
---danger: hsl(7 100% 66%);
---warning: hsl(53 100% 21%);
---success: hsl(162 100% 22%);
---info: hsl(217 100% 70%);
+  --bg: hsl(297 100% 5%);
+  --bg-light: hsl(298 100% 8%);
+  --bg-gradient: linear-gradient(0deg, var(--bg), var(--bg-light));
+  --text: hsl(301 100% 98%);
+  --text-muted: hsl(301 39% 72%);
+  --highlight: hsl(299 61% 38%);
+  --border: hsl(298 100% 21%);
+  --border-muted: hsl(298 100% 12%);
+  --primary: hsl(299 82% 72%);
+  --secondary: hsl(133 62% 53%);
+  --danger: hsl(7 100% 66%);
+  --warning: hsl(53 100% 21%);
+  --success: hsl(162 100% 22%);
+  --info: hsl(217 100% 70%);
+  --border-radius: 20px 0px 20px 0px;
 }
 
 body {
@@ -24,7 +26,6 @@ body {
   justify-content: center;
   align-items: center;
   height: 100vh;
-  text-align: center;
   color: #333;
 }
 
@@ -55,13 +56,17 @@ p {
     "Text Text"
     "Author Author";
   gap: 0.5rem;
-  margin: auto;
+  margin: 1rem;
   padding: 0%;
   max-width: 30%;
   padding: 1rem;
   border: 2px solid var(--border);
   border-radius: var(--border-radius);
   background-color: var(--bg);
+}
+
+.container2:hover {
+  background: var(--bg-gradient);
 }
 
 /* reset default margins and padding that create “extra boxes” */
@@ -84,14 +89,25 @@ p {
   color: var(--text-muted);
   background-color: var(--bg-light);
   text-align: left;
+  padding: 0.5rem;
 }
 
 .Author { grid-area: Author;
   color: var(--text-muted);
   background-color: var(--bg-light);
   text-align: end;
+  padding: 0.5rem;
 }
 
+@media (max-width: 600px) {
+  .container2 {
+    width: 100%;
+    padding: 0.5rem;
+  }
+  .body {
+    flex-direction: column;
+  }
+}
 
 /* debugging styles 
 * {
