--- a/style.css
+++ b/style.css
@@ -99,13 +99,14 @@ p {
   padding: 0.5rem;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 1200px) {
   .container2 {
     width: 100%;
     padding: 0.5rem;
   }
   .body {
     flex-direction: column;
+    align-items: stretch;
   }
 }
 
