--- a/style.css
+++ b/style.css
@@ -23,10 +23,17 @@ body {
   font-family: Arial, sans-serif;
   background: var(--bg-dark);
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100vh;
   color: #333;
+}
+
+.card-area {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 1em;
 }
 
 .container {
@@ -38,18 +45,28 @@ body {
 }
 
 h1 {
-  color: #ff9800;
-  margin-bottom: 10px;
+  color: var(--primary);
+  font-size: 5rem;
+  text-align: center;
+}
+span {
+  color: var(--secondary);
 }
 
-p {
-  font-size: 1.1em;
+nav a {
+  color: var(--text);
+  text-decoration: none;
+  margin: 0 10px;
 }
 
-.container2 {  display: grid;
+nav a:hover {
+  text-decoration: underline;
+  color: var(--secondary);
+}
+
+.card {  display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr auto auto;
-  gap: 0px 0px;
+  grid-template-rows: auto 1fr auto;
   grid-auto-flow: row;
   grid-template-areas:
     "Title Video"
@@ -58,15 +75,17 @@ p {
   gap: 0.5rem;
   margin: 1rem;
   padding: 0%;
-  max-width: 30%;
+  max-width: 25%;
   padding: 1rem;
   border: 2px solid var(--border);
   border-radius: var(--border-radius);
   background-color: var(--bg);
+
 }
 
-.container2:hover {
+.card:hover {
   background: var(--bg-gradient);
+  
 }
 
 /* reset default margins and padding that create “extra boxes” */
@@ -77,7 +96,8 @@ p {
 
 .Title { grid-area: Title;
   color: var(--text);
-  justify-self: start;
+  text-align: left;
+  font-size: 1.5em;
   }
 
 .Video { grid-area: Video;
@@ -92,25 +112,37 @@ p {
   padding: 0.5rem;
 }
 
+.Text p {
+  color: var(--text-muted);
+  font-size: 1em;
+}
+
 .Author { grid-area: Author;
   color: var(--text-muted);
   background-color: var(--bg-light);
   text-align: end;
   padding: 0.5rem;
+  font-size: 0.5em;
 }
 
 @media (max-width: 1000px) {
-  .container2 {
+  .card {
     max-width: 100%;
     padding: 0.5rem;
+    grid-template-columns: 1fr;
+    grid-template-areas:
+    "Title"
+    "Video"
+    "Text"
+    "Author";
   }
-  body {
+  .card-area {
     flex-direction: column;
     align-items: stretch;
   }
 }
 
-/* debugging styles 
-* {
+/* debugging styles */
+/* {
   outline: 1px dashed red;
 }*/
