--- a/style.css
+++ b/style.css
@@ -112,12 +112,11 @@ nav a:hover {
 
 .Video { grid-area: Video;
   color: var(--text);
-  background-color: var(--bg);
 }
 
 .Video iframe {
   width: 100%;
-  height: 100%;
+  height: 100px;
   border: none;
   border-radius: var(--border-radius);
 }
