--- a/style.css
+++ b/style.css
@@ -142,6 +142,9 @@ nav a:hover {
 }
 
 @media (max-width: 1000px) {
+  .Video iframe {
+    height: 150px;
+  }
   h1 {
     font-size: 3rem;
     padding: 0 1rem;
