--- a/style.css
+++ b/style.css
@@ -67,11 +67,10 @@ nav a:hover {
   color: var(--secondary);
 }
 
-.card-area {
+.card-area, .bento-area {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 20px;
   align-content: center;
 }
 
@@ -84,8 +83,7 @@ nav a:hover {
     "Text Text"
     "Author Author";
   gap: 0.5rem;
-  margin: 1rem;
-  padding: 0%;
+  margin: 0.5rem;
   max-width: 300px;
   padding: 1rem;
   border: 2px solid var(--border);
@@ -163,6 +161,8 @@ nav a:hover {
   align-items: center;
   font-size: 2rem;
   color: var(--text);
+  gap: 0.5rem;
+  margin: 0.5rem;
 }
 
 /* Specific styles for each box in bento*/
@@ -172,7 +172,9 @@ nav a:hover {
 .box4 { grid-area: box4; }
 .box5 { grid-area: box5; } 
 
-@media (max-width: 1000px) {
+@media (max-width: 800px) {
+
+
   .Video iframe {
     height: 200px;
   }
@@ -182,7 +184,7 @@ nav a:hover {
   }
   .card {
     max-width: 100%;
-    padding: 0.5rem;
+    
     grid-template-columns: 1fr;
     grid-template-areas:
     "Title"
@@ -190,7 +192,21 @@ nav a:hover {
     "Text"
     "Author";
   }
-  .card-area {
+  
+  .bento {
+    width: 100%;
+    grid-template-columns: 1fr;
+    grid-auto-rows: 200px;
+    grid-template-areas: 
+      "box1"
+      "box2"
+      "box3"
+      "box4"
+      "box5";
+  }
+  .card-area, .bento-area {
+    margin: 1rem;
+    width: 100%;
     flex-direction: column;
     align-items: stretch;
   }
