--- a/style.css
+++ b/style.css
@@ -48,6 +48,13 @@ h1 {
   font-size: 5rem;
   text-align: center;
 }
+
+h2 {
+  color: var(--primary);
+  font-size: 2rem;
+  text-align: center;
+}
+
 span {
   color: var(--secondary);
 }
