--- a/style.css
+++ b/style.css
@@ -21,17 +21,16 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-  margin: 0;
-  padding: 0;
   font-family: Arial, sans-serif;
   background: var(--bg-dark);
-  display: flex;
+  /*display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  align-items: center;*/
   color: var(--text);
 }
 
@@ -47,6 +46,7 @@ h1 {
   color: var(--primary);
   font-size: 5rem;
   text-align: center;
+  padding: 1em;
 }
 
 h2 {
@@ -60,18 +60,33 @@ span {
 }
 
 nav {
-  margin: 20px 0px 0px 0px;
+  background-color: var(--bg-light);
+  border-bottom: 1px solid var(--highlight);
 }
 
+nav ul {
+  list-style: none;
+  display: flex;
+}
+nav .home-li {
+  margin-right: auto;
+}
 nav a {
-  color: var(--text);
+  display: flex;
   text-decoration: none;
-  margin: 0px 10px;
+  color: var(--text);
+  padding: 1em 2em;
 }
 
 nav a:hover {
-  text-decoration: underline;
-  color: var(--secondary);
+  background-color: var(--highlight);
+}
+
+nav a.active-link {
+  border-bottom: 2px solid var(--text);
+}
+nav a.accent-link {
+  background-color: var(--secondary);
 }
 
 .card-area, .bento-area {
@@ -151,11 +166,9 @@ nav a:hover {
   display: grid;
   grid-template-columns: 200px 200px 200px 200px;
   grid-template-rows: 200px 200px;
-  gap: 1em;
   grid-template-areas: 
     "box1 box2 box2 box3"
     "box1 box4 box5 box5";
-  
 }
 
 /* Common styles for all boxes in bento*/
@@ -179,15 +192,25 @@ nav a:hover {
 .box4 { grid-area: box4; }
 .box5 { grid-area: box5; } 
 
+@media (max-width: 1200px) {
+  .bento {
+    grid-template-columns: 200px 200px;
+    grid-template-rows: 200px 200px 200px 200px;
+    grid-template-areas: 
+      "box1 box3"
+      "box1 box4"
+      "box2 box2"
+      "box5 box5";
+  }
+}
+
 @media (max-width: 800px) {
-
-
   .Video iframe {
     height: 200px;
   }
   h1 {
     font-size: 3rem;
-    padding: 0 1rem;
+    padding: 1em;
   }
   .card {
     max-width: 100%;
