--- a/style.css
+++ b/style.css
@@ -24,13 +24,13 @@
   box-sizing: border-box;
 }
 
-body {
+.MainContent {
   font-family: Arial, sans-serif;
   background: var(--bg-dark);
-  /*display: flex;
+  display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;*/
+  align-items: center;
   color: var(--text);
 }
 
@@ -62,6 +62,7 @@ span {
 nav {
   background-color: var(--bg-light);
   border-bottom: 1px solid var(--highlight);
+
 }
 
 nav ul {
@@ -235,7 +236,6 @@ nav a.accent-link {
       "box5";
   }
   .card-area, .bento-area {
-    margin: 1rem;
     width: 100%;
     flex-direction: column;
     align-items: stretch;
@@ -245,4 +245,4 @@ nav a.accent-link {
 /* debugging styles */
 /* {
   outline: 1px dashed red;
-}*/
+}
